k8s/ingress/httpsredirect-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: httpsredirect-middleware
spec:
  redirectScheme:
    scheme: https
    permanent: true
