k8s/ingress/stripprefix-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-middleware
spec:
  stripPrefix:
    prefixes:
    - /api
    - /grafana
