k8s/ingress/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-httpsredirect-middleware@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
spec:
  rules:
  - host: grafana.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
  tls:
  - hosts:
    - grafana.${DOMAIN_NAME}
    secretName: grafana-letsencryptcrt-secret
